--- a/desktop-themes/Blue-Submarine/gtk-3.0/menu.css
+++ b/desktop-themes/Blue-Submarine/gtk-3.0/menu.css
@@ -86,7 +86,7 @@ menubar {
  ***************/
 menubar > menuitem  {
     padding: 5px 5px;
-    transition: all 300ms ease-out;
+    transition: all 200ms ease-out;
     border-radius: 0px;
     border-width: 0px;
     min-height: 16px;
@@ -131,9 +131,9 @@ toolbar.primary-toolbar menuitem,
 toolbar.primary-toolbar button menuitem,
 window.background.popup menu menuitem,
 window.background.popup menuitem {
-    transition: all 300ms ease-out;
+/*    transition: all 300ms ease-out; FIXME this caused items jumpings*
 /*    -GtkMenuItem-arrow-scaling: 0.7; */
-    padding: 2px 4px;
+    transition: all 200ms ease-out
     border-radius: 0px;
     color: @menu_fg_dark_color;
     text-shadow: 1px 1px @menu_shadow_dark_color;
@@ -161,7 +161,7 @@ treemenu menuitem {
 
 toolbar combobox menuitem,
 combobox menuitem {
-    transition: all 500ms ease-out;
+    transition: all 200ms ease-out;
     color: @menu_fg_dark_color;
     text-shadow: 0px 1px @menu_shadow_dark_color;
 }
